2006-01-31  Albert Chu  <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-lan-interface.c (ipmi_lan_cmd2): Remove
	debugging statements.

	* libfreeipmi/src/ipmi-lan-interface.c (get_rq_checksum1,
	get_rq_checksum1, get_rq_checksum2, get_rs_checksum2,
	fill_lan_msg_hdr2, fill_lan_msg_trlr2, fill_hdr_session2,
	_ipmi_lan_pkt_rq_size2, _ipmi_lan_pkt_rs_size2,
	unassemble_ipmi_lan_pkt2, ipmi_lan_validate_checksum): Fix
	parameter checks.

	* libfreeipmi/src/ipmi-msg-support-cmds.c
	(fill_kcs_set_channel_access, fill_kcs_set_user_name,
	fill_kcs_get_user_name, fill_kcs_set_user_password,
	fill_kcs_set_user_access, fill_kcs_get_user_access,
	fill_kcs_get_channel_access, fill_kcs_get_channel_info,
	ipmi_cmd_set_channel_access2, ipmi_cmd_set_user_name2,
	ipmi_cmd_get_user_name2, ipmi_cmd_set_user_password2,
	ipmi_cmd_set_user_access2, ipmi_cmd_get_user_access2,
	ipmi_cmd_get_channel_access2, ipmi_cmd_get_channel_info2): Fix
	consistency issue with fill function parameters.

	* libfreeipmi/src/ipmi-msg-support-cmds.c
	(ipmi_lan_open_session2): Fix parameter checks.

	* libfreeipmi/src/ipmi-lan-interface.c (get_rq_checksum2,
	get_rs_checksum2): Use fiid_template_free().

	* libfreeipmi/src/ipmi-lan-interface.c (fill_hdr_session2): Fix
	endian bugs.

	* libfreeipmi/src/ipmi-semaphores.h (IPMI_MUTEX_LOCK,
	IPMI_MUTEX_UNLOCK): Revert fixes from 2005-08-30.

2006-01-30  Albert Chu  <chu11@llnl.gov>

	* bmc-watchdog/src/bmc-watchdog.c (_init_ipmi): Re-add error
	output message.

	* bmc-watchdog/src/bmc-watchdog.c (_FIID_OBJ_GET): Cleaned up code.

	* bmc-watchdog/src/bmc-watchdog.c: Remove all #if 0'd code.

	* libfreeipmi/src/ipmi-interface.c (ipmi_cmd): Add parameter
	checks.

	* libfreeipmi/src/ipmi-msg-support-cmds.c
	(ipmi_get_channel_number2): Add parameter check.

	* libfreeipmi/src/ipmi-dev-global-cmds.c (fill_cmd_get_dev_id):
	Add parameter check.

	* libfreeipmi/src/acpi-spmi-locate.c (ipmi_acpi_get_spmi_table):
	Add parameter checks.
