@@ -7,8 +7,8 @@
 	get_rq_checksum1, get_rq_checksum2, get_rs_checksum2,
 	fill_lan_msg_hdr2, fill_lan_msg_trlr2, fill_hdr_session2,
 	_ipmi_lan_pkt_rq_size2, _ipmi_lan_pkt_rs_size2,
-	unassemble_ipmi_lan_pkt2, ipmi_lan_validate_checksum): Fix
-	parameter checks.
+	unassemble_ipmi_lan_pkt2, ipmi_lan_validate_checksum,
+	ipmi_lan_cmd_raw_send): Fix parameter checks.
 
 	* libfreeipmi/src/ipmi-msg-support-cmds.c
 	(fill_kcs_set_channel_access, fill_kcs_set_user_name,
@@ -25,13 +25,21 @@
 	(ipmi_lan_open_session2): Fix parameter checks.
 
 	* libfreeipmi/src/ipmi-lan-interface.c (get_rq_checksum2,
-	get_rs_checksum2): Use fiid_template_free().
+	get_rs_checksum2, ipmi_lan_cmd_raw2): Use fiid_template_free().
 
 	* libfreeipmi/src/ipmi-lan-interface.c (fill_hdr_session2): Fix
 	endian bugs.
 
 	* libfreeipmi/src/ipmi-semaphores.h (IPMI_MUTEX_LOCK,
 	IPMI_MUTEX_UNLOCK): Revert fixes from 2005-08-30.
+
+	* libfreeipmi/src/ipmi-lan-interface.c (ipmi_lan_cmd_raw2): Code
+	cleanup.
+
+	* libfreeipmi/src/ipmi-lan-interface.c (ipmi_lan_cmd_raw2): Fix
+	buffer overflow bug.
+
+	* ipmi-raw/src/ipmi-raw.c (main): Fix output bug.
 
 2006-01-30  Albert Chu  <chu11@llnl.gov>
 
